--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Build
         run: hugo --gc --minify --cleanDestinationDir
+      
+      - name: Set CNAME
+        run: echo "fzxiao.top" > ./public/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
